22.apr (ws)
      - changed default style for lyrics odd/even lines to be the same (no italic any more)
      - fix script initialization (colornotes.js)
      - fix crash when inserting new staff above
      - updated gui script interface
21.apr (ws)
      - optimize layout for notehead dots in multi voice context
      - layout optimization for articulation symbols
      - use QDesktopServices::storageLocation to set default working directory to
      "DocumentsLocation"
      (db)
      - LilyPond: fix export of B major and C-sharp major key signatures
      - add E flat bass and B flat bass to brass section of English instruments list
19.apr (ws)
      - note entry mode: modified chord entry, prev-chord, next-chord
      - fix default stem direction in multi voice context
      (db)
      - added soprano cornet, treble clef euphonium, baritone, and treble clef baritone
        to English instruments list
      - updates to handbook using latest SVN version of pisa. Support for inline images
        now possible (see voices and beams pages)
      - update Norwegian translation by daghenningsorbo
12.apr (ws)
      - fix note stem direction of beamed notes if notes are above and below the beam
      - add new demo "praeludium2.mscx" (J.S.Bach WTC I)
11.apr (ws)
      - add "Search" to edit menu
      - dont extend top/bottom ledger line for chords with displaced note heads
        (layout enhancement)
      - fix displaced notehead (visible in italian-1.mscx bar 34)
      (la)
      - enable paste of chord names on rest
      - fix export of dominant chord in musicXML
      - add ability to color notehead from plugins
10.apr (ws)
      - reduce stem len of beamed grace notes
      - fix: ties do not work via note entry with mouse
      - pitch up/down for drum does not change pitch but change to next/prev
        instrument in drumset
      - disable dragging of drum note heads
      - fix: freeze when double click in drum palette
9.apr (ws)